--- a/LeetCode/1081-1090/1089. 复写零（简单）.md
+++ b/LeetCode/1081-1090/1089. 复写零（简单）.md
@@ -53,7 +53,7 @@ Tag : 「双指针」
 
 > 这个往回赋值的过程，十分建议大家在纸上推导一遍。
 
-代码：
+Java 代码：
 ```Java
 class Solution {
     public void duplicateZeros(int[] arr) {
@@ -70,6 +70,59 @@ class Solution {
         }
     }
 }
+```
+C++ 代码：
+```C++
+class Solution {
+public:
+    void duplicateZeros(vector<int>& arr) {
+        int n = arr.size(), i = 0, j = 0;
+        while (j < n) {
+            if (arr[i] == 0) j++;
+            i++; j++;
+        }
+        i--; j--;
+        while (i >= 0) {
+            if (j < n) arr[j] = arr[i];
+            if (arr[i] == 0 && --j >= 0) arr[j] = 0;
+            i--; j--;
+        }
+    }
+};
+```
+Python 代码：
+```Python
+class Solution:
+    def duplicateZeros(self, arr: List[int]) -> None:
+        n, i, j = len(arr), 0, 0
+        while j < n:
+            if arr[i] == 0: 
+                j += 1
+            i, j = i + 1, j + 1
+        i, j = i - 1, j - 1
+        while i >= 0:
+            if j < n:
+                arr[j] = arr[i]
+            if arr[i] == 0 and j - 1 >= 0:
+                j -= 1
+                arr[j] = 0
+            i, j = i - 1, j - 1
+```
+TypeScript 代码：
+```TypeScript
+function duplicateZeros(arr: number[]): void {
+    let n = arr.length, i = 0, j = 0;
+    while (j < n) {
+        if (arr[i] == 0) j++;
+        i++; j++;
+    }
+    i--; j--;
+    while (i >= 0) {
+        if (j < n) arr[j] = arr[i];
+        if (arr[i] == 0 && --j >= 0) arr[j] = 0;
+        i--; j--;
+    }
+};
 ```
 * 时间复杂度：$O(n)$
 * 空间复杂度：$O(1)$
