--- a/LeetCode/1211-1220/1217. 玩筹码（简单）.md
+++ b/LeetCode/1211-1220/1217. 玩筹码（简单）.md
@@ -6,14 +6,16 @@ Tag : 「贪心」、「枚举」
 
 
 
-有 `n` 个筹码。第 $i$ 个筹码的位置是 `position[i]`。
+有 `n` 个筹码，第 $i$ 个筹码的位置是 `position[i]`。
 
-我们需要把所有筹码移到同一个位置。在一步中，我们可以将第 $i$ 个筹码的位置从 $position[i]$ 改变为:
+我们需要把所有筹码移到同一个位置。
+
+在一步中，我们可以将第 $i$ 个筹码的位置从 $position[i]$ 改变为:
 
 * `position[i] + 2 或 position[i] - 2`，此时 `cost = 0`
 * `position[i] + 1 或 position[i] - 1`，此时 `cost = 1`
 
-返回将所有筹码移动到同一位置上所需要的 最小代价 。
+返回将所有筹码移动到同一位置上所需要的最小代价。
 
 示例 1：
 ![](https://assets.leetcode.com/uploads/2020/08/15/chips_e1.jpg)
@@ -60,7 +62,7 @@ Tag : 「贪心」、「枚举」
 
 综上，我们可以枚举所有已有的位置为目标位置，并通过奇偶性统计其余位置到目标位置的成本，在所有已有位置中取最小的总成本即是答案。
 
-代码：
+Java 代码：
 ```Java
 class Solution {
     public int minCostToMoveChips(int[] ps) {
@@ -77,6 +79,52 @@ class Solution {
     }
 }
 ```
+C++ 代码：
+```C++
+class Solution {
+public:
+    int minCostToMoveChips(vector<int>& ps) {
+        int n = ps.size(), ans = numeric_limits<int>::max();
+        for (int i = 0; i < n; i++) {
+            int a = ps[i], cur = 0;
+            for (int j = 0; j < n; j++) {
+                int b = ps[j];
+                cur += abs(a - b) % 2;
+            }
+            ans = min(ans, cur);
+        }
+        return ans;
+    }
+};
+```
+Python 代码：
+```Python
+class Solution:
+    def minCostToMoveChips(self, ps: List[int]) -> int:
+        n, ans = len(ps), float('inf')
+        for i in range(n):
+            a, cur = ps[i], 0
+            for j in range(n):
+                b = ps[j]
+                cur += abs(a - b) % 2
+            ans = min(ans, cur)
+        return ans
+```
+TypeScript 代码：
+```TypeScript
+function minCostToMoveChips(ps: number[]): number {
+    let n = ps.length, ans = 0x3f3f3f3f;
+    for (let i = 0; i < n; i++) {
+        let a = ps[i], cur = 0;
+        for (let j = 0; j < n; j++) {
+            const b = ps[j];
+            cur += Math.abs(a - b) % 2;
+        }
+        ans = Math.min(ans, cur);
+    }
+    return ans;
+};
+```
 * 时间复杂度：$O(n^2)$
 * 空间复杂度：$O(1)$
 
@@ -88,7 +136,7 @@ class Solution {
 
 因此我们可以省去枚举具体位置的操作，转而统计原有数的奇偶位置个数，假设偶数位置有 $a$ 个，奇数位置有 $b$ 个，最终目标位置选为偶数的成本为 $b$，最终目标位置选为奇数的成本为 $a$，即两者中的最小值即是答案。
 
-代码：
+Java 代码：
 ```Java
 class Solution {
     public int minCostToMoveChips(int[] ps) {
@@ -97,6 +145,32 @@ class Solution {
         return Math.min(a, n - a);
     }
 }
+```
+C++ 代码：
+```C++
+class Solution {
+public:
+    int minCostToMoveChips(vector<int>& ps) {
+        int n = ps.size(), a = 0;
+        for (int i : ps) a += i % 2;
+        return min(a, n - a);
+    }
+};
+```
+Python 代码：
+```Python
+class Solution:
+    def minCostToMoveChips(self, ps: List[int]) -> int:
+        n, a = len(ps), sum(x % 2 for x in ps)
+        return min(a, n - a)
+```
+TypeScript 代码：
+```TypeScript
+function minCostToMoveChips(ps: number[]): number {
+    const n = ps.length;
+    let a = ps.filter(x => x % 2 === 1).length;
+    return Math.min(a, n - a);
+};
 ```
 * 时间复杂度：$O(n)$
 * 空间复杂度：$O(1)$
