--- a/LeetCode/1221-1230/1224. 最大相等频率（困难）.md
+++ b/LeetCode/1221-1230/1224. 最大相等频率（困难）.md
@@ -8,7 +8,7 @@ Tag : 「模拟」、「哈希表」、「计数」
 
 给你一个正整数数组 `nums`，请你帮忙从该数组中找出能满足下面要求的最长前缀，并返回该前缀的长度：
 
-* 从前缀中 恰好删除一个 元素后，剩下每个数字的出现次数都相同。
+* 从前缀中恰好删除一个元素后，剩下每个数字的出现次数都相同。
 
 如果删除这个元素后没有剩余元素存在，仍可认为每个数字都具有相同的出现次数（也就是 $0$ 次）。
 
@@ -61,6 +61,42 @@ class Solution {
         return ans;
     }
 }
+```
+C++ 代码：
+```C++
+class Solution {
+public:
+    int maxEqualFreq(vector<int>& nums) {
+        vector<int> cnt(100010, 0), sumv(100010, 0);
+        int n = nums.size(), maxv = 0, ans = 0; 
+        for (int i = 0; i < n; i++) {
+            int t = nums[i], cur = ++cnt[t], len = i + 1;
+            sumv[cur]++; sumv[cur - 1]--;
+            maxv = max(maxv, cur);
+            if (maxv == 1) ans = len;
+            if (maxv * sumv[maxv] + 1 == len) ans = len;
+            if ((maxv - 1) * (sumv[maxv - 1] + 1) + 1 == len) ans = len;
+        }
+        return ans;
+    }
+};
+```
+Python 代码：
+```Python
+class Solution:
+    def maxEqualFreq(self, nums: List[int]) -> int:
+        cnt, sumv = [0] * 100010, [0] * 100010
+        n, maxv, ans = len(nums), 0, 0
+        for i, t in enumerate(nums):
+            cur, lenv = cnt[nums[i]] + 1, i + 1
+            cnt[t] += 1
+            sumv[cur] += 1
+            sumv[cur - 1] -= 1
+            maxv = max(maxv, cur)
+            if maxv == 1: ans = lenv
+            if maxv * sumv[maxv] + 1 == lenv: ans = lenv
+            if (maxv - 1) * (sumv[maxv - 1] + 1) + 1 == lenv: ans = lenv
+        return ans
 ```
 TypeScript 代码：
 ```TypeScript
