--- a/LeetCode/1441-1450/1450. 在既定时间做作业的学生人数（简单）.md
+++ b/LeetCode/1441-1450/1450. 在既定时间做作业的学生人数（简单）.md
@@ -83,6 +83,32 @@ class Solution {
     }
 }
 ```
+C++ 代码：
+```C++
+class Solution {
+public:
+    int busyStudent(vector<int>& st, vector<int>& et, int t) {
+        vector<int> c(1010, 0);
+        for (int i = 0; i < st.size(); i++) {
+            c[st[i]] += 1; c[et[i] + 1] -= 1;
+        }
+        for (int i = 1; i <= t; ++i) c[i] += c[i - 1];
+        return c[t];
+    }
+};
+```
+Python 代码：
+```Python
+class Solution:
+    def busyStudent(self, st: List[int], et: List[int], t: int) -> int:
+        c = [0] * 1010
+        for i in range(len(st)):
+            c[st[i]] += 1
+            c[et[i] + 1] -= 1
+        for i in range(t + 1):
+            c[i] += c[i - 1]
+        return c[t]
+```
 TypeScript 代码：
 ```TypeScript
 function busyStudent(st: number[], et: number[], t: number): number {
