--- a/LeetCode/1811-1820/1818. 绝对差值和（中等）.md
+++ b/LeetCode/1811-1820/1818. 绝对差值和（中等）.md
@@ -6,20 +6,20 @@ Tag : 「二分」
 
 
 
-给你两个正整数数组 `nums1` 和 `nums2` ，数组的长度都是 `n` 。
+给你两个正整数数组 `nums1` 和 `nums2`，数组的长度都是 `n` 。
 
-数组 `nums1` 和 `nums2` 的 **绝对差值和** 定义为所有 `|nums1[i] - nums2[i]|（0 <= i < n）`的 总和（下标从 $0$ 开始）。
+数组 `nums1` 和 `nums2` 的**绝对差值和**定义为所有 `|nums1[i] - nums2[i]|（0 <= i < n）`的总和（下标从 0 开始）。
 
-你可以选用 `nums1` 中的 **任意一个** 元素来替换 `nums1` 中的 **至多** 一个元素，以 **最小化** 绝对差值和。
+你可以选用 `nums1` 中的**任意一个**元素来替换 `nums1` 中的**至多**一个元素，以**最小化**绝对差值和。
 
-在替换数组 `nums1` 中最多一个元素 之后 ，返回最小绝对差值和。因为答案可能很大，所以需要对 $10^9 + 7$ 取余 后返回。
+在替换数组 `nums1` 中最多一个元素之后，返回最小绝对差值和。
+
+因为答案可能很大，所以需要对 $10^9 + 7$ 取余 后返回。
 
 `|x|` 定义为：
 
 * 如果 $x >= 0$，值为 `x` ，或者
 * 如果 $x <= 0$，值为 `-x`
-
-
 
 示例 1：
 
@@ -52,10 +52,10 @@ Tag : 「二分」
 ```
 
 提示：
-* $n == nums1.length$
-* $n == nums2.length$
+* $n = nums1.length$
+* $n = nums2.length$
 * $1 <= n <= 10^5$
-* $1 <= nums1[i], nums2[i] <= $10^5$
+* $1 <= nums1[i], nums2[i] <= 10^5$
 
 ---
 
@@ -63,15 +63,15 @@ Tag : 「二分」
 
 这是一道二分陈题，具体做法如下：
 
-我们在进行处理前，先对 $nums1$ 进行拷贝并排序，得到 $sorted$ 数组。
+我们在进行处理前，先对 `nums1` 进行拷贝并排序，得到 `sorted` 数组。
 
-然后 **在遍历 $nums1$ 和 $nums2$ 计算总的差值 $sum$ 时，通过对 $sorted$ 进行二分查找，找到最合适替换 $nums[i]$ 的值**。
+然后 **在遍历 `nums1` 和 `nums2` 计算总的差值 `sum` 时，通过对 `sorted` 进行二分查找，找到最合适替换 $nums[i]$ 的值**。
 
-具体的，当我们处理到第 $i$ 位时，假设该位的原差值为 $x = abs(nums1[i] - nums2[i])$，然后从 $sorted$ 数组中通过二分找到最接近 $nums2[i]$ 的值，计算一个新的差值 $nd$（注意要检查分割点与分割点的下一位），如果满足 $nd < x$ 说明存在一个替换方案使得差值变小，我们使用变量 $max$ 记下来这个替换方案所带来的变化，并不断更新 $max$。
+具体的，当我们处理到第 `i` 位时，假设该位的原差值为 `x = abs(nums1[i] - nums2[i])`，然后从 `sorted` 数组中通过二分找到最接近 $nums2[i]$ 的值，计算一个新的差值 `nd`（注意要检查分割点与分割点的下一位），如果满足 $nd < x$ 说明存在一个替换方案使得差值变小，我们使用变量 `max` 记下来这个替换方案所带来的变化，并不断更新 `max`。
 
-当整个数组被处理完，$max$ 存储着最优方案对应的差值变化，此时 $sum - max$ 即是答案。
+当整个数组被处理完，`max` 存储着最优方案对应的差值变化，此时 `sum - max` 即是答案。
 
-代码：
+Java 代码：
 ```Java
 class Solution {
     int mod = (int)1e9+7;
@@ -98,6 +98,85 @@ class Solution {
         return (int)((sum - max) % mod);
     }
 }
+```
+C++ 代码：
+```C++
+class Solution {
+public:
+    int mod = 1e9 + 7;
+    int minAbsoluteSumDiff(vector<int>& nums1, vector<int>& nums2) {
+        int n = nums1.size();
+        vector<int> sorted = nums1;
+        sort(sorted.begin(), sorted.end());
+        long long sum = 0, maxv = 0;
+        for (int i = 0; i < n; i++) {
+            int a = nums1[i], b = nums2[i];
+            if (a == b) continue;
+            long long x = abs(a - b);
+            sum += x;
+            int l = 0, r = n - 1;
+            while (l < r) {
+                int mid = l + r + 1 >> 1;
+                if (sorted[mid] <= b) l = mid;
+                else r = mid - 1;
+            }
+            int nd = abs(sorted[r] - b);
+            if (r + 1 < n) nd = min(nd, abs(sorted[r + 1] - b));
+            if (nd < x) maxv = max(maxv, x - nd);
+        }
+        return static_cast<int>((sum - maxv) % mod);
+    }
+};
+```
+Python 代码：
+```Python
+class Solution:
+    def minAbsoluteSumDiff(self, nums1: List[int], nums2: List[int]) -> int:
+        mod = 10**9 + 7
+        n = len(nums1)
+        sorted_nums1 = sorted(nums1)
+        sumv, maxv = 0, 0
+        for i in range(n):
+            a, b = nums1[i], nums2[i]
+            if a == b: continue
+            x = abs(a - b)
+            sumv += x
+            l, r = 0, n - 1
+            while l < r:
+                mid = l + r + 1 >> 1
+                if sorted_nums1[mid] <= b: l = mid
+                else: r = mid - 1
+            nd = abs(sorted_nums1[r] - b)
+            if r + 1 < n:
+                nd = min(nd, abs(sorted_nums1[r + 1] - b))
+            if nd < x:
+                maxv = max(maxv, x - nd)
+        return (sumv - maxv) % mod
+```
+TypeScript 代码：
+```TypeScript
+function minAbsoluteSumDiff(nums1: number[], nums2: number[]): number {
+    const n: number = nums1.length, mod: number = 1e9 + 7;
+    const sorted: number[] = [...nums1].sort((a, b) => a - b);
+    let sum: number = 0, max: number = 0;
+    for (let i: number = 0; i < n; i++) {
+        const a: number = nums1[i], b: number = nums2[i];
+        if (a === b) continue;
+        const x: number = Math.abs(a - b);
+        sum += x;
+        let l: number = 0;
+        let r: number = n - 1;
+        while (l < r) {
+            const mid: number = l + r + 1 >> 1;
+            if (sorted[mid] <= b) l = mid;
+            else r = mid - 1;
+        }
+        let nd: number = Math.abs(sorted[r] - b);
+        if (r + 1 < n) nd = Math.min(nd, Math.abs(sorted[r + 1] - b));
+        if (nd < x) max = Math.max(max, x - nd);
+    }
+    return (sum - max) % mod;
+};
 ```
 * 时间复杂度：对 `sorted` 进行拷贝并排序的复杂度为 $O(n\log{n})$；遍历处理数组时会一边统计，一边尝试二分，找最合适的替换数值，复杂度为 $O(n\log{n})$。整体复杂度为 $O(n\log{n})$
 * 空间复杂度：使用 `sorted` 数组需要 $O(n)$ 的空间复杂度，同时排序过程中会使用 $O(\log{n})$ 的空间复杂度；整体复杂度为 $O(n + \log{n})$
