--- a/LeetCode/1821-1830/1823. 找出游戏的获胜者（中等）.md
+++ b/LeetCode/1821-1830/1823. 找出游戏的获胜者（中等）.md
@@ -6,7 +6,11 @@ Tag : 「模拟」、「约瑟夫环」
 
 
 
-共有 $n$ 名小伙伴一起做游戏。小伙伴们围成一圈，按 顺时针顺序 从 $1$ 到 $n$ 编号。确切地说，从第 $i$ 名小伙伴顺时针移动一位会到达第 ($i+1$) 名小伙伴的位置，其中 $1 <= i < n$ ，从第 $n$ 名小伙伴顺时针移动一位会回到第 $1$ 名小伙伴的位置。
+共有 $n$ 名小伙伴一起做游戏。
+
+小伙伴们围成一圈，按顺时针顺序从 $1$ 到 $n$ 编号。
+
+确切地说，从第 `i` 名小伙伴顺时针移动一位会到达第 `i + 1` 名小伙伴的位置，其中 $1 <= i < n$ ，从第 `n` 名小伙伴顺时针移动一位会回到第 `1` 名小伙伴的位置。
 
 游戏遵循如下规则：
 
@@ -58,7 +62,7 @@ Tag : 「模拟」、「约瑟夫环」
 
 一些细节，为了方便取模，我们调整点编号从 $1$ 开始，在返回答案时再重新调整为从 $1$ 开始。
 
-代码：
+Java 代码：
 ```Java
 class Solution {
     public int findTheWinner(int n, int k) {
@@ -77,6 +81,43 @@ class Solution {
     }
 }
 ```
+C++ 代码：
+```C++
+class Solution {
+public:
+    int findTheWinner(int n, int k) {
+        vector<bool> vis(n + 10, false);
+        int cnt = 0, cur = 0;
+        while (cnt != n - 1) {
+            for (int j = 0; j < k - 1; j++) {
+                cur++;
+                while (vis[cur % n]) cur++;
+            }
+            vis[cur % n] = true;
+            cnt++; cur++;
+            while (vis[cur % n]) cur++;
+        }
+        return (cur % n) + 1;
+    }
+};
+```
+Python 代码：
+```Python
+class Solution:
+    def findTheWinner(self, n: int, k: int) -> int:
+        vis = [False] * (n + 10)
+        cnt, cur = 0, 0
+        while cnt != n - 1:
+            for j in range(k - 1):
+                cur += 1
+                while vis[cur % n]:
+                    cur += 1
+            vis[cur % n] = True
+            cnt, cur = cnt + 1, cur + 1
+            while vis[cur % n]:
+                cur += 1
+        return (cur % n) + 1
+```
 * 时间复杂度：要消除（被标记）的点数量为 $n - 1$，每次找到要消除的点编号，最多遍历 $n$ 个点，复杂度为 $O(n^2)$
 * 空间复杂度：$O(n)$
 
@@ -92,7 +133,7 @@ class Solution {
 
 一些细节，由于编号从 $1$ 开始，在返回答案时我们需要将结果为 $0$ 的值映射回编号 $n$。
 
-代码：
+Java 代码：
 ```Java
 class Solution {
     public int findTheWinner(int n, int k) {
@@ -101,6 +142,25 @@ class Solution {
         return ans == 0 ? n : ans;
     }
 }
+```
+C++ 代码：
+```C++
+class Solution {
+public:
+    int findTheWinner(int n, int k) {
+        if (n <= 1) return n;
+        int ans = (findTheWinner(n - 1, k) + k) % n;
+        return ans == 0 ? n : ans;
+    }
+};
+```
+Python 代码：
+```Python
+class Solution:
+    def findTheWinner(self, n: int, k: int) -> int:
+        if n <= 1: return n
+        ans = (self.findTheWinner(n - 1, k) + k) % n
+        return n if ans == 0 else ans
 ```
 * 时间复杂度：$O(n)$
 * 空间复杂度：$O(1)$
