--- a/LeetCode/331-340/331. 验证二叉树的前序序列化（中等）.md
+++ b/LeetCode/331-340/331. 验证二叉树的前序序列化（中等）.md
@@ -6,7 +6,10 @@ Tag : 「二叉树」
 
 
 
-序列化二叉树的一种方法是使用前序遍历。当我们遇到一个非空节点时，我们可以记录下这个节点的值。如果它是一个空节点，我们可以使用一个标记值记录，例如 #。
+序列化二叉树的一种方法是使用前序遍历。当我们遇到一个非空节点时，我们可以记录下这个节点的值。
+
+如果它是一个空节点，我们可以使用一个标记值记录，例如 `#`。
+
 ```
      _9_
     /   \
@@ -16,13 +19,15 @@ Tag : 「二叉树」
 / \ / \   / \
 # # # #   # #
 ```
-例如，上面的二叉树可以被序列化为字符串 "9,3,4,#,#,1,#,#,2,#,6,#,#"，其中 # 代表一个空节点。
+例如，上面的二叉树可以被序列化为字符串 `"9,3,4,#,#,1,#,#,2,#,6,#,#"`，其中 `#` 代表一个空节点。
 
-给定一串以逗号分隔的序列，验证它是否是正确的二叉树的前序序列化。编写一个在不重构树的条件下的可行算法。
+给定一串以逗号分隔的序列，验证它是否是正确的二叉树的前序序列化。
 
-每个以逗号分隔的字符或为一个整数或为一个表示 null 指针的 '#' 。
+编写一个在不重构树的条件下的可行算法。
 
-你可以认为输入格式总是有效的，例如它永远不会包含两个连续的逗号，比如 "1,,3" 。
+每个以逗号分隔的字符或为一个整数或为一个表示 `null` 指针的 `'#'` 。
+
+你可以认为输入格式总是有效的，例如它永远不会包含两个连续的逗号，比如 `"1,,3" `。
 
 示例 1:
 ```
@@ -52,13 +57,13 @@ Tag : 「二叉树」
 
 同时，一颗合格的二叉树最终结果必然满足 `in == out`。
 
-**但我们又不能只利用最终 `in == out` 来判断是否合法，这很容易可以举出反例：考虑将一个合法序列的空节点全部提前，这样最终结果仍然满足 `in == out`，但这样的二叉树是不存在的。**
+但我们又不能只利用最终 `in == out` 来判断是否合法，这很容易可以举出反例：考虑将一个合法序列的空节点全部提前，这样最终结果仍然满足 `in == out`，但这样的二叉树是不存在的。
 
-**我们还需要一些额外的特性，支持我们在遍历过程中提前知道一颗二叉树不合法。**
+我们还需要一些额外的特性，支持我们在遍历过程中提前知道一颗二叉树不合法。
 
-**例如，我们可以从合格二叉树的前提出发，挖掘遍历过程中 `in` 和 `out` 与 `n` 和 `m` 的关系。**
+例如，我们可以从合格二叉树的前提出发，挖掘遍历过程中 `in` 和 `out` 与 `n` 和 `m` 的关系。
 
-***
+---
 
 ### 证明 1（利用不等式）
 
@@ -108,7 +113,7 @@ Tag : 「二叉树」
 
 **因此，我们可以一边遍历一边统计「严格出度」和「严格入度」，然后写一个 `check` 函数去判定 $in$、$out$ 和 $m$ 三者关系是否符合要求，如果不符合则说明二叉树不合法。**
 
-代码：
+伪代码：
 ```Java
 class Solution {
   public boolean isValidSerialization(String s) {
@@ -127,14 +132,13 @@ class Solution {
   }
 }
 ```
+注意：因为我们这里的证明使用到的是不等式。因此统计的必须是「严格出度」&「严格入度」，不能假定一个「非空节点（非根）」必然对应两个「出度」和一个「入度」。
 
-**注意：因为我们这里的证明使用到的是不等式。因此统计的必须是「严格出度」&「严格入度」，不能假定一个「非空节点（非根）」必然对应两个「出度」和一个「入度」。**
+要想统计出「严格出度」&「严格入度」在编码上还是有一定难度的。那么是否可以推导出更加简单性质来使用呢？
 
-**要想统计出「严格出度」&「严格入度」在编码上还是有一定难度的。那么是否可以推导出更加简单性质来使用呢？**
+请看「证明 2」。
 
-**请看「证明 2」。**
-
-***
+---
 
 ### 证明 2（利用技巧转换为等式）
 
@@ -168,7 +172,7 @@ $in = m + n - 1 <= m + m - 1 = 2m - 1 = out - 1$
 
 即可得 $in + 1 <= out$ ，也就是 $in < out$ 恒成立。
 
-代码：
+Java 代码：
 ```Java
 class Solution {
     public boolean isValidSerialization(String s) {
@@ -184,9 +188,63 @@ class Solution {
     }
 }
 ```
+C++ 代码：
+```C++
+class Solution {
+public:
+    bool isValidSerialization(string s) {
+        vector<string> ss;
+        split(s, ',', ss);
+        int n = ss.size();
+        int in = 0, out = 0;
+        for (int i = 0; i < n; i++) {
+            if (ss[i] != "#") out += 2;
+            if (i != 0) in++;
+            if (i != n - 1 && out <= in) return false;
+        }
+        return in == out;
+    }
+    void split(const string &s, char delimiter, vector<string> &ss) {
+        stringstream ss_stream(s);
+        string item;
+        while (getline(ss_stream, item, delimiter)) {
+            ss.push_back(item);
+        }
+    }
+};
+```
+Python 代码：
+```Python
+class Solution:
+    def isValidSerialization(self, s: str) -> bool:
+        ss = s.split(',')
+        n = len(ss)
+        inval, outval = 0, 0
+        for i in range(n):
+            if ss[i] != '#':
+                outval += 2
+            if i != 0:
+                inval += 1
+            if i != n - 1 and outval <= inval:
+                return False
+        return inval == outval
+```
+TypeScript 代码：
+```TypeScript
+function isValidSerialization(s: string): boolean {
+    const ss = s.split(',');
+    const n = ss.length;
+    let inval = 0, outval = 0;
+    for (let i = 0; i < n; i++) {
+        if (ss[i] !== '#') outval += 2;
+        if (i !== 0) inval++;
+        if (i !== n - 1 && outval <= inval) return false;
+    }
+    return inval === outval;
+};
+```
 * 时间复杂度：$O(n)$
 * 空间复杂度：$O(n)$
-
 
 ---
 
