--- a/LeetCode/381-390/390. 消除游戏（中等）.md
+++ b/LeetCode/381-390/390. 消除游戏（中等）.md
@@ -65,24 +65,39 @@ $$
 此时可得到第二个公式：
 
 $$
-f[i] = f'[\left \lfloor \frac{i}{2} \right \rfloor] * 2
+f[i] = f'[\left \lfloor \frac{i}{2} \right \rfloor] \times 2
 $$
 
 通过上述两个公式，我们可以将 $f'[i]$ 进行消除，得到最终的 $f[i]$ 关系式：
 
 $$
-f[i] = 2 * (\left \lfloor \frac{i}{2} \right \rfloor + 1 - f[\left \lfloor \frac{i}{2} \right \rfloor])
+f[i] = 2 \times (\left \lfloor \frac{i}{2} \right \rfloor + 1 - f[\left \lfloor \frac{i}{2} \right \rfloor])
 $$
 
 我们知道需要实现的函数 `lastRemaining` 其实就是 $f[i]$，因此该递推过程我们可以使用递归进行实现（注意的出口条件 $f[1] = 1$）。
 
-代码：
+Java 代码：
 ```Java
 class Solution {
     public int lastRemaining(int n) {
         return n == 1 ? 1 : 2 * (n / 2 + 1 - lastRemaining(n / 2));
     }
 }
+```
+C++ 代码：
+```C++
+class Solution {
+public:
+    int lastRemaining(int n) {
+        return n == 1 ? 1 : 2 * (n / 2 + 1 - lastRemaining(n / 2));
+    }
+};
+```
+Python 代码：
+```Python
+class Solution:
+    def lastRemaining(self, n: int) -> int:
+        return 1 if n == 1 else 2 * (n // 2 + 1 - self.lastRemaining(n // 2))
 ```
 * 时间复杂度：$O(\log{n})$
 * 空间复杂度：忽略递归带来的额外空间开销，复杂度为 $O(1)$
