--- a/LeetCode/391-400/398. 随机数索引（中等）.md
+++ b/LeetCode/391-400/398. 随机数索引（中等）.md
@@ -6,11 +6,11 @@ Tag : 「哈希表」、「模拟」、「随机化」、「蓄水池抽样」
 
 
 
-给定一个可能含有重复元素的整数数组，要求随机输出给定的数字的索引。 您可以假设给定的数字一定存在于数组中。
+给定一个可能含有重复元素的整数数组，要求随机输出给定的数字的索引。 
 
-注意：
+您可以假设给定的数字一定存在于数组中。
 
-数组大小可能非常大。 使用太多额外空间的解决方案将不会通过测试。
+注意：数组大小可能非常大，使用太多额外空间的解决方案将不会通过测试。
 
 示例:
 ```
@@ -25,28 +25,22 @@ solution.pick(1);
 ```
 
 提示：
-* $1 <= nums.length <= 2 * 10^4$
+* $1 <= nums.length <= 2 \times 10^4$
 * $-2^{31} <= nums[i] <= 2^{31} - 1$
 * `target` 确保存在于 `nums` 中
 * 最多调用 $10^4$ 次的 `pick`
 
 ---
 
-### 哈希表 预处理（定长数据流）
+### 哈希表 + 预处理（定长数据流）
 
-切换英文补全一下数据范围：
-* $1 <= nums.length <= 2 * 10^4$
-* $-2^{31} <= nums[i] <= 2^{31} - 1$
-* `target` 确保存在于 `nums` 中
-* 最多调用 $10^4$ 次的 `pick`
-
-为了方便，我们令 `nums` 的长度为 $n$，利用 $n$ 的数据范围为 $2 * 10^4$，且完整的数组为初始化时已给出，我们可以通过使用「哈希表 + 预处理」的方式进行求解。
+为了方便，我们令 `nums` 的长度为 $n$，利用 $n$ 的数据范围为 $2 \times 10^4$，且完整的数组为初始化时已给出，我们可以通过使用「哈希表 + 预处理」的方式进行求解。
 
 具体的，在构造函数传入 `nums` 时，遍历 `nums` 并存储每个 $nums[i]$ 对应的下标集合，即使用哈希表以 $nums[i]$ 为键，下标集合 `List` 作为值进行存储。
 
 在 `pick` 操作时，通过 $O(1)$ 的复杂度取出所有 $nums[i] = target$ 的集合下标，再随机一个下标进行返回。
 
-代码：
+Java 代码：
 ```Java
 class Solution {
     Random random = new Random();
@@ -65,14 +59,47 @@ class Solution {
     }
 }
 ```
+C++ 代码：
+```C++
+class Solution {
+public:
+    unordered_map<int, vector<int>> map;
+    Solution(vector<int>& nums) {
+     int n = nums.size();
+        for (int i = 0; i < n; i++) {
+            map[nums[i]].push_back(i);
+        }
+    }
+    int pick(int target) {
+        vector<int>& list = map[target];
+        return list[rand() % list.size()];
+    }
+};
+```
+Python 代码：
+```Python
+class Solution:
+    def __init__(self, nums: List[int]):
+        self.mapping = {}
+        n = len(nums)
+        for i in range(n):
+            if nums[i] not in self.mapping:
+                self.mapping[nums[i]] = []
+            self.mapping[nums[i]].append(i)
+
+    def pick(self, target: int) -> int:
+        return random.choice(self.mapping.get(target, []))
+```
 * 时间复杂度：初始化的复杂度为 $O(n)$；`pick` 操作的复杂度为 $O(1)$
 * 空间复杂度：$O(n)$
 
 ---
 
-### 蓄水池抽样（不定长数据流）
+### 蓄水池抽样（不定长数据流）- TLE
 
-若 `nums` 并不是在初始化时完全给出，而是持续以「流」的形式给出，且数据流的很长，不便进行预处理的话，我们只能使用「蓄水池抽样」的方式求解。
+虽然对于本题而言，蓄水池抽样方法（`pick` 操作复杂度 $O(n)$ 的）会面临 `TLE`。
+
+但当 `nums` 并不是在初始化时完全给出，而是持续以「流」的形式给出，且数据流的很长，不便进行预处理的话，我们只能使用「蓄水池抽样」的方式求解。
 
 **不了解「蓄水池抽样」的同学可以看前置 🧀 : [多语言入门「蓄水池抽样」知识点](https://mp.weixin.qq.com/s?__biz=MzU4NDE3MTEyMA==&mid=2247490892&idx=1&sn=c1fe373edc88142cbabd383ef3c0669b)**
 
@@ -86,7 +113,7 @@ class Solution {
 
 假设最后返回的是第 $k$ 个满足条件的下标，发生概率为 = 第 $k$ 个下标被候选的概率 $\times$ 后面 $k + 1$ 到 $m$ 个下标不被候选的概率 = $\frac{1}{k} \times (1 - \frac{1}{k + 1}) \times ... \times (1 - \frac{1}{m})$ = $\frac{1}{m}$ 。
 
-代码：
+Java 代码：
 ```Java
 class Solution {
     Random random = new Random();
@@ -105,6 +132,44 @@ class Solution {
         return ans;
     }
 }
+```
+C++ 代码：
+```C++
+class Solution {
+public:
+    vector<int> nums;
+    mt19937 random;
+    Solution(vector<int>& _nums) : nums(_nums) {
+        srand(time(nullptr));
+        random.seed(rand());
+    }
+    int pick(int target) {
+        int ans = -1, cnt = 0;
+        for (size_t i = 0; i < nums.size(); i++) {
+            if (nums[i] == target) {
+                cnt++;
+                if (uniform_int_distribution<>(0, cnt - 1)(random) == 0) {
+                    ans = i;
+                }
+            }
+        }
+        return ans;
+    }
+};
+```
+Python 代码：
+```Python
+class Solution:
+    def __init__(self, nums: List[int]):
+        self.nums = nums
+    def pick(self, target: int) -> int:
+        ans, cnt = 0, 0
+        for i in range(len(self.nums)):
+            if self.nums[i] == target:
+                cnt += 1
+                if random.randint(0, cnt - 1) == 0:
+                    ans = i
+        return ans
 ```
 * 时间复杂度：初始化的复杂度为 $O(1)$；`pick` 操作的复杂度为 $O(n)$
 * 空间复杂度：$O(n)$
