--- a/LeetCode/581-590/581. 最短无序连续子数组（中等）.md
+++ b/LeetCode/581-590/581. 最短无序连续子数组（中等）.md
@@ -6,9 +6,9 @@ Tag : 「排序」、「双指针」
 
 
 
-给你一个整数数组 `nums` ，你需要找出一个 连续子数组 ，如果对这个子数组进行升序排序，那么整个数组都会变为升序排序。
+给你一个整数数组 `nums`，你需要找出一个连续子数组，如果对这个子数组进行升序排序，那么整个数组都会变为升序排序。
 
-请你找出符合题意的 最短 子数组，并输出它的长度。
+请你找出符合题意的最短子数组，并输出它的长度。
 
 示例 1：
 ```
@@ -43,7 +43,7 @@ Tag : 「排序」、「双指针」
 
 最终目的是让整个数组有序，那么我们可以先将数组拷贝一份进行排序，然后使用两个指针 $i$ 和 $j$ 分别找到左右两端第一个不同的地方，那么 $[i, j]$ 这一区间即是答案。
 
-代码：
+Java 代码：
 ```Java
 class Solution {
     public int findUnsortedSubarray(int[] nums) {
@@ -56,6 +56,45 @@ class Solution {
         return j - i + 1;
     }
 }
+```
+C++ 代码：
+```C++
+class Solution {
+public:
+    int findUnsortedSubarray(vector<int>& nums) {
+        int n = nums.size();
+        vector<int> arr(nums);
+        sort(arr.begin(), arr.end());
+        int i = 0, j = n - 1;
+        while (i <= j && nums[i] == arr[i]) ++i;
+        while (i <= j && nums[j] == arr[j]) --j;
+        return j - i + 1;
+    }
+};
+```
+Python 代码：
+```Python
+class Solution:
+    def findUnsortedSubarray(self, nums: List[int]) -> int:
+        n = len(nums)
+        arr = sorted(nums)
+        i, j = 0, n - 1
+        while i <= j and nums[i] ==arr[i]: 
+            i += 1
+        while i <= j and nums[j] == arr[j]: 
+            j -= 1
+        return j - i + 1
+```
+TypeScript 代码：
+```TypeScript
+function findUnsortedSubarray(nums: number[]): number {
+    const n: number = nums.length;
+    const arr: number[] = Array.from(nums).sort((a, b) => a - b);
+    let i: number = 0, j: number = n - 1;
+    while (i <= j && nums[i] === arr[i]) i++;
+    while (i <= j && nums[j] === arr[j]) j--;
+    return j - i + 1;  
+};
 ```
 * 时间复杂度：$O(n\log{n})$
 * 空间复杂度：$O(n)$
@@ -77,7 +116,7 @@ class Solution {
 
 > 一些细节：在调整 $i$ 和 $j$ 的时候，我们可能会到达数组边缘，这时候可以建立两个哨兵：数组左边存在一个足够小的数，数组右边存在一个足够大的数。
 
-代码：
+Java 代码：
 ```Java
 class Solution {
     int MIN = -100005, MAX = 100005;
@@ -101,6 +140,77 @@ class Solution {
         return j == i ? 0 : (j - 1) - (i + 1) + 1;
     }
 }
+```
+C++ 代码：
+```C++
+class Solution {
+public:
+    int MIN = -100005, MAX = 100005;
+    int findUnsortedSubarray(vector<int>& nums) {
+        int n = nums.size();
+        int i = 0, j = n - 1;
+        while (i < j && nums[i] <= nums[i + 1]) i++;
+        while (i < j && nums[j] >= nums[j - 1]) j--;
+        int l = i, r = j;
+        int minv = nums[i], maxv = nums[j];
+        for (int u = l; u <= r; ++u) {
+            if (nums[u] < minv) {
+                while (i >= 0 && nums[i] > nums[u]) i--;
+                minv = i >= 0 ? nums[i] : MIN;
+            }
+            if (nums[u] > maxv) {
+                while (j < n && nums[j] < nums[u]) j++;
+                maxv = j < n ? nums[j] : MAX;
+            }
+        }
+        return j == i ? 0 : (j - 1) - (i + 1) + 1;
+    }
+};
+```
+Python 代码：
+```Python
+class Solution:
+    def findUnsortedSubarray(self, nums: List[int]) -> int:
+        n, MIN, MAX = len(nums), -100005, 100005
+        i, j = 0, n - 1
+        while i < j and nums[i] <= nums[i + 1]:
+            i += 1
+        while i < j and nums[j] >= nums[j - 1]:
+            j -= 1
+        l, r = i, j
+        minv, maxv = nums[i], nums[j]
+        for u in range(l, r + 1):
+            if nums[u] < minv:
+                while i >= 0 and nums[i] > nums[u]:
+                    i -= 1
+                minv = MIN if i < 0 else nums[i]
+            if nums[u] > maxv:
+                while j < n and nums[j] < nums[u]:
+                    j += 1
+                maxv = MAX if j >= n else nums[j]
+        return 0 if j == i else (j - 1) - (i + 1) + 1
+```
+TypeScript 代码：
+```TypeScript
+function findUnsortedSubarray(nums: number[]): number {
+    const n: number = nums.length, MIN: number = -100005, MAX: number = 100005;
+    let i: number = 0, j: number = n - 1;
+    while (i < j && nums[i] <= nums[i + 1]) i++;
+    while (i < j && nums[j] >= nums[j - 1]) j--;
+    const l = i, r = j;
+    let minv = nums[i], maxv = nums[j];
+    for (let u: number = l; u <= r; u++) {
+        if (nums[u] < minv) {
+            while (i >= 0 && nums[i] > nums[u]) i--;
+            minv = i >= 0 ? nums[i] : MIN;
+        }
+        if (nums[u] > maxv) {
+            while (j < n && nums[j] < nums[u]) j++;
+            maxv = j < n ? nums[j] : MAX;
+        }
+    }
+    return j === i ? 0 : (j - 1) - (i + 1) + 1;
+};
 ```
 * 时间复杂度：$O(n)$
 * 空间复杂度：$O(1)$
