--- a/LeetCode/591-600/592. 分数加减运算（中等）.md
+++ b/LeetCode/591-600/592. 分数加减运算（中等）.md
@@ -106,6 +106,53 @@ class Solution {
     }
 }
 ```
+C++ 代码：
+```C++
+class Solution {
+public:
+    string fractionAddition(string s) {
+        int n = s.length();
+        string ans = "";
+        for (int i = 0; i < n; ) {
+            int j = i + 1;
+            while (j < n && s[j] != '+' && s[j] != '-') j++;
+            string num = s.substr(i, j - i);
+            if (s[i] != '+' && s[i] != '-') num = "+" + num;
+            if (!ans.empty()) ans = calc(num, ans);
+            else ans = num;
+            i = j;
+        }
+        return ans.front() == '+' ? ans.substr(1) : ans;
+    }
+    string calc(string a, string b) {
+        bool fa = a.front() == '+', fb = b.front() == '+';
+        if (!fa && fb) return calc(b, a);
+        auto p = parse(a), q = parse(b);
+        long long p1 = p.first * q.second, q1 = q.first * p.second;
+        if (fa && fb) {
+            long long r1 = p1 + q1, r2 = p.second * q.second, c = gcd(r1, r2);
+            return "+" + to_string(r1 / c) + "/" + to_string(r2 / c);
+        } else if (!fa && !fb) {
+            long long r1 = p1 + q1, r2 = p.second * q.second, c = gcd(r1, r2);
+            return "-" + to_string(r1 / c) + "/" + to_string(r2 / c);
+        } else {
+            long long r1 = p1 - q1, r2 = p.second * q.second, c = gcd(abs(r1), r2);
+            string ans = to_string(r1 / c) + "/" + to_string(r2 / c);
+            if (p1 >= q1) ans = "+" + ans;
+            return ans;
+        }
+    }
+    pair<long long, long long> parse(string s) {
+        int idx = 1;
+        while (idx < s.length() && s[idx] != '/') idx++;
+        long long a = stoll(s.substr(1, idx - 1)), b = stoll(s.substr(idx + 1));
+        return {a, b};
+    }
+    long long gcd(long long a, long long b) {
+        return b == 0 ? a : gcd(b, a % b);
+    }
+};
+```
 TypeScript 代码：
 ```TypeScript
 function fractionAddition(s: string): string {
