--- a/LeetCode/591-600/593. 有效的正方形（中等）.md
+++ b/LeetCode/591-600/593. 有效的正方形（中等）.md
@@ -6,33 +6,33 @@ Tag : 「模拟」、「数学」、「计算几何」
 
 
 
-给定 `2D` 空间中四个点的坐标 `p1`, `p2`, `p3` 和 `p4`，如果这四个点构成一个正方形，则返回 `true` 。
+给定 `2D` 空间中四个点的坐标 `a`, `b`, `c` 和 `d`，如果这四个点构成一个正方形，则返回 `true` 。
 
-点的坐标 `pi` 表示为 $[x_i, y_i]$ 。输入 不是 按任何顺序给出的。
+点的坐标表示为 $[x_i, y_i]$ ，输入不是按任何顺序给出的。
 
-一个 有效的正方形 有四条等边和四个等角(`90`度角)。
+一个有效的正方形有四条等边和四个等角(`90`度角)。
 
 示例 1:
 ```
-输入: p1 = [0,0], p2 = [1,1], p3 = [1,0], p4 = [0,1]
+输入: a = [0,0], b = [1,1], c = [1,0], d = [0,1]
 
 输出: True
 ```
 示例 2:
 ```
-输入：p1 = [0,0], p2 = [1,1], p3 = [1,0], p4 = [0,12]
+输入：a = [0,0], b = [1,1], c = [1,0], d = [0,12]
 
 输出：false
 ```
 示例 3:
 ```
-输入：p1 = [1,0], p2 = [-1,0], p3 = [0,1], p4 = [0,-1]
+输入：a = [1,0], b = [-1,0], c = [0,1], d = [0,-1]
 
 输出：true
 ```
 
 提示:
-* $p1.length == p2.length == p3.length == p4.length == 2$
+* $a.length == b.length == c.length == d.length == 2$
 * $-10^4 <= x_i, y_i <= 10^4$
 
 ---
@@ -61,6 +61,43 @@ class Solution {
         return true;
     }
 }
+```
+C++ 代码：
+```C++
+class Solution {
+public:
+    long len = -1;
+    bool validSquare(vector<int>& a, vector<int>& b, vector<int>& c, vector<int>& d) {
+        return calc(a, b, c) && calc(a, b, d) && calc(a, c, d) && calc(b, c, d);
+    }
+    bool calc(vector<int>& a, vector<int>& b, vector<int>& c) {
+        long l1 = (a[0] - b[0]) * (a[0] - b[0]) + (a[1] - b[1]) * (a[1] - b[1]);
+        long l2 = (a[0] - c[0]) * (a[0] - c[0]) + (a[1] - c[1]) * (a[1] - c[1]);
+        long l3 = (b[0] - c[0]) * (b[0] - c[0]) + (b[1] - c[1]) * (b[1] - c[1]);
+        bool ok = (l1 == l2 && l1 + l2 == l3) || (l1 == l3 && l1 + l3 == l2) || (l2 == l3 && l2 + l3 == l1);
+        if (!ok) return false;
+        if (len == -1) len = min(l1, l2);
+        else if (len == 0 || len != min(l1, l2)) return false;
+        return true;
+    }
+};
+```
+Python 代码：
+```Python
+class Solution:
+    def validSquare(self, a: list, b: list, c: list, d: list) -> bool:
+        length = -1
+        def calc(a, b, c):
+            nonlocal length
+            l1 = (a[0] - b[0]) ** 2 + (a[1] - b[1]) ** 2
+            l2 = (a[0] - c[0]) ** 2 + (a[1] - c[1]) ** 2
+            l3 = (b[0] - c[0]) ** 2 + (b[1] - c[1]) ** 2
+            ok = (l1 == l2 and l1 + l2 == l3) or (l1 == l3 and l1 + l3 == l2) or (l2 == l3 and l2 + l3 == l1)
+            if not ok: return False
+            if length == -1: length = min(l1, l2)
+            elif length == 0 or length != min(l1, l2): return False
+            return True
+        return calc(a, b, c) and calc(a, b, d) and calc(a, c, d) and calc(b, c, d)
 ```
 TypeScript 代码：
 ```TypeScript
