--- a/LeetCode/621-630/622. 设计循环队列（中等）.md
+++ b/LeetCode/621-630/622. 设计循环队列（中等）.md
@@ -6,9 +6,15 @@ Tag : 「设计数据结构」、「队列」
 
 
 
-设计你的循环队列实现。 循环队列是一种线性数据结构，其操作表现基于 `FIFO`（先进先出）原则并且队尾被连接在队首之后以形成一个循环。它也被称为“环形缓冲器”。
+设计你的循环队列实现。 
 
-循环队列的一个好处是我们可以利用这个队列之前用过的空间。在一个普通队列里，一旦一个队列满了，我们就不能插入下一个元素，即使在队列前面仍有空间。但是使用循环队列，我们能使用这些空间去存储新的值。
+循环队列是一种线性数据结构，其操作表现基于 `FIFO`（先进先出）原则并且队尾被连接在队首之后以形成一个循环，它也被称为“环形缓冲器”。
+
+循环队列的一个好处是我们可以利用这个队列之前用过的空间。
+
+在一个普通队列里，一旦一个队列满了，我们就不能插入下一个元素，即使在队列前面仍有空间。
+
+但是使用循环队列，我们能使用这些空间去存储新的值。
 
 你的实现应该支持如下操作：
 
@@ -86,6 +92,71 @@ class MyCircularQueue {
         return ta - he == k;
     }
 }
+```
+C++ 代码：
+```C++
+class MyCircularQueue {
+public:
+    int k, he, ta;
+    vector<int> nums;
+    MyCircularQueue(int _k) {
+        k = _k;
+        he = ta = 0;
+        nums.resize(k);
+    }
+    bool enQueue(int value) {
+        if (isFull()) return false;
+        nums[ta % k] = value;
+        return ++ta >= 0;
+    }
+    bool deQueue() {
+        if (isEmpty()) return false;
+        return ++he >= 0;
+    }
+    int Front() {
+        return isEmpty() ? -1 : nums[he % k];
+    }
+    int Rear() {
+        return isEmpty() ? -1 : nums[(ta - 1) % k];
+    }
+    bool isEmpty() {
+        return he == ta;
+    }
+    bool isFull() {
+        return ta - he == k;
+    }
+};
+```
+Python 代码：
+```Python
+class MyCircularQueue:
+    def __init__(self, _k):
+        self.k = _k
+        self.he = self.ta = 0
+        self.nums = [0] * _k
+
+    def enQueue(self, value):
+        if self.isFull(): return False
+        self.nums[self.ta % self.k] = value
+        self.ta += 1
+        return self.ta >= 0
+
+    def deQueue(self):
+        if self.isEmpty(): return False
+        self.he += 1
+        return self.he >= 0
+
+    def Front(self):
+        return -1 if self.isEmpty() else self.nums[self.he % self.k]
+
+    def Rear(self):
+        return -1 if self.isEmpty() else self.nums[(self.ta - 1) % self.k]
+
+    def isEmpty(self):
+        return self.he == self.ta
+
+    def isFull(self):
+        return self.ta - self.he == self.k
 ```
 TypeScript 代码：
 ```TypeScript
