--- a/LeetCode/631-640/640. 求解方程（中等）.md
+++ b/LeetCode/631-640/640. 求解方程（中等）.md
@@ -6,11 +6,13 @@ Tag : 「模拟」、「数学」、「双指针」
 
 
 
-求解一个给定的方程，将 `x` 以字符串 `"x=#value"` 的形式返回。该方程仅包含 `'+'` ， `'-'` 操作，变量 `x` 和其对应系数。
+求解一个给定的方程，将 `x` 以字符串 `"x=#value"` 的形式返回。
+
+该方程仅包含 `'+'` ， `'-'` 操作，变量 `x` 和其对应系数。
 
 如果方程没有解，请返回 `"No solution"`。如果方程有无限解，则返回 `"Infinite solutions"`。
 
-题目保证，如果方程中只有一个解，则 'x' 的值是一个整数。
+题目保证，如果方程中只有一个解，则 `'x'` 的值是一个整数。
 
 示例 1：
 ```
@@ -82,6 +84,59 @@ class Solution {
         else return "x=" + (num / -x);
     }
 }
+```
+C++ 代码：
+```C++
+class Solution {
+public:
+    string solveEquation(string s) {
+        int x = 0, num = 0, n = s.length();
+        for (int i = 0, op = 1; i < n; ) {
+            if (s[i] == '+') {
+                op = 1; i++;
+            } else if (s[i] == '-') {
+                op = -1; i++;
+            } else if (s[i] == '=') {
+                x *= -1; num *= -1; op = 1; i++;
+            } else {
+                int j = i;
+                while (j < n && s[j] != '+' && s[j] != '-' && s[j] != '=') j++;
+                if (s[j - 1] == 'x') x += (i < j - 1 ? stoi(s.substr(i, j - i - 1)) : 1) * op;
+                else num += stoi(s.substr(i, j)) * op;
+                i = j;
+            }
+        }
+        if (x == 0) return num == 0 ? "Infinite solutions" : "No solution";
+        else return "x=" + to_string(-num / x);
+    }
+};
+```
+Python 代码：
+```Python
+class Solution:
+    def solveEquation(self, s: str) -> str:
+        x, num, n = 0, 0, len(s)
+        i, op = 0, 1
+        while i < n:
+            if s[i] == '+':
+                op, i = 1, i + 1
+            elif s[i] == '-':
+                op, i = -1, i + 1
+            elif s[i] == '=':
+                x, num, op, i = x * -1, num * -1, 1, i + 1
+            else:
+                j = i
+                while j < n and s[j] not in '+-=':
+                    j += 1
+                if s[j - 1] == 'x':
+                    x += (int(s[i:j - 1]) if i < j - 1 else 1) * op
+                else:
+                    num += int(s[i:j]) * op
+                i = j
+        if x == 0:
+            return "Infinite solutions" if num == 0 else "No solution"
+        else:
+            return f"x={num // -x}"
 ```
 TypeScript 代码：
 ```TypeScript
