--- a/LeetCode/651-660/658. 找到 K 个最接近的元素（中等）.md
+++ b/LeetCode/651-660/658. 找到 K 个最接近的元素（中等）.md
@@ -6,7 +6,9 @@ Tag : 「二分」、「双指针」
 
 
 
-给定一个 排序好 的数组 `arr`，两个整数 `k` 和 `x` ，从数组中找到最靠近 `x`（两数之差最小）的 `k` 个数。返回的结果必须要是按升序排好的。
+给定一个排序好的数组 `arr`，两个整数 `k` 和 `x` ，从数组中找到最靠近 `x`（两数之差最小）的 `k` 个数。
+
+返回的结果必须要是按升序排好的。
 
 整数 `a` 比整数 `b` 更接近 `x` 需要满足：
 
@@ -65,6 +67,59 @@ class Solution {
         return ans;
     }
 }
+```
+C++ 代码：
+```C++
+class Solution {
+public:
+    vector<int> findClosestElements(vector<int>& arr, int k, int x) {
+        int n = arr.size(), l = 0, r = n - 1;
+        while (l < r) {
+            int mid = l + r + 1 >> 1;
+            if (arr[mid] <= x) l = mid;
+            else r = mid - 1;
+        }
+        r = (r + 1 < n && abs(arr[r + 1] - x) < abs(arr[r] - x)) ? r + 1 : r;
+        int i = r - 1, j = r + 1;
+        while (j - i - 1 < k) {
+            if (i >= 0 && j < n) {
+                if (abs(arr[j] - x) < abs(arr[i] - x)) j++;
+                else i--;
+            } else if (i >= 0) {
+                i--;
+            } else {
+                j++;
+            }
+        }
+        vector<int> ans;
+        for (int p = i + 1; p <= j - 1; p++) ans.push_back(arr[p]);
+        return ans;
+    }
+};
+```
+Python 代码：
+```Python
+class Solution:
+    def findClosestElements(self, arr: List[int], k: int, x: int) -> List[int]:
+        n = len(arr)
+        l, r = 0, n - 1
+        while l < r:
+            mid = l + r + 1 >> 1
+            if arr[mid] <= x: l = mid
+            else: r = mid - 1
+        r = r + 1 if r + 1 < n and abs(arr[r + 1] - x) < abs(arr[r] - x) else r
+        i, j = r - 1, r + 1
+        while j - i - 1 < k:
+            if i >= 0 and j < n:
+                if abs(arr[j] - x) < abs(arr[i] - x):
+                    j += 1
+                else:
+                    i -= 1
+            elif i >= 0:
+                i -= 1
+            else:
+                j += 1
+        return arr[i + 1:j]
 ```
 TypeScript 代码：
 ```TypeScript
