--- a/LeetCode/741-750/741. 摘樱桃（困难）.md
+++ b/LeetCode/741-750/741. 摘樱桃（困难）.md
@@ -58,7 +58,7 @@ Tag : 「线性 DP」
 
 一些细节：为了防止从值为 $-1$ 的格子进行转移影响正确性，我们需要先将所有 $f[k][i1][i2]$ 初始化为负无穷。
 
-代码：
+Java 代码：
 ```Java
 class Solution {
     static int N = 55, INF = Integer.MIN_VALUE;
@@ -90,6 +90,60 @@ class Solution {
         return f[2 * n][n][n] <= 0 ? 0 : f[2 * n][n][n];
     }
 }
+```
+C++ 代码：
+```C++
+class Solution {
+public:
+    int cherryPickup(vector<vector<int>>& g) {
+        int n = g.size(), INF = -0x3f3f3f3f;
+        long f[2 * (n + 10)][n + 10][n + 10];
+        for (int k = 0; k <= 2 * n; k++) {
+            for (int i1 = 0; i1 <= n; i1++) {
+                for (int i2 = 0; i2 <= n; i2++) {
+                    f[k][i1][i2] = INF;
+                }
+            }
+        }
+        f[2][1][1] = g[0][0];
+        for (int k = 3; k <= 2 * n; k++) {
+            for (int i1 = 1; i1 <= n; i1++) {
+                for (int i2 = 1; i2 <= n; i2++) {
+                    int j1 = k - i1, j2 = k - i2;
+                    if (j1 <= 0 || j1 > n || j2 <= 0 || j2 > n) continue;
+                    int A = g[i1 - 1][j1 - 1], B = g[i2 - 1][j2 - 1];
+                    if (A == -1 || B == -1) continue;
+                    int a = f[k - 1][i1 - 1][i2], b = f[k - 1][i1 - 1][i2 - 1], c = f[k - 1][i1][i2 - 1], d = f[k - 1][i1][i2];
+                    int t = max({a, b, c, d}) + A;
+                    if (i1 != i2) t += B;
+                    f[k][i1][i2] = t;
+                }
+            }
+        }
+        return f[2 * n][n][n] <= 0 ? 0 : f[2 * n][n][n];
+    }
+};
+```
+Python 代码：
+```Python
+class Solution:
+    def cherryPickup(self, g: List[List[int]]) -> int:
+        N, INF = 55, float('-inf')
+        f = [[[INF] * (N + 1) for _ in range(N + 1)] for _ in range(2 * N + 1)]
+        n = len(g)
+        f[2][1][1] = g[0][0]
+        for k in range(3, 2 * n + 1):
+            for i1 in range(1, n + 1):
+                for i2 in range(1, n + 1):
+                    j1, j2 = k - i1, k - i2
+                    if j1 <= 0 or j1 > n or j2 <= 0 or j2 > n: continue
+                    A, B = g[i1 - 1][j1 - 1], g[i2 - 1][j2 - 1]
+                    if A == -1 or B == -1: continue
+                    a, b, c, d = (f[k - 1][i1 - 1][i2], f[k - 1][i1 - 1][i2 - 1], f[k - 1][i1][i2 - 1], f[k - 1][i1][i2])
+                    t = max(a, max(b, max(c, d))) + A
+                    if i1 != i2: t += B
+                    f[k][i1][i2] = t
+        return 0 if f[2 * n][n][n] <= 0 else f[2 * n][n][n]
 ```
 * 时间复杂度：状态数量级为 $n^3$，每个状态转移复杂度为 $O(1)$。整体复杂度为 $O(n^3)$
 * 空间复杂度：$O(n^3)$
