--- a/LeetCode/761-770/768. 最多能完成排序的块 II（困难）.md
+++ b/LeetCode/761-770/768. 最多能完成排序的块 II（困难）.md
@@ -8,7 +8,9 @@ Tag : 「贪心」
 
 这个问题和“最多能完成排序的块”相似，但给定数组中的元素可以重复，输入数组最大长度为$2000$，其中的元素最大为 $10^8$。
 
-`arr` 是一个可能包含重复元素的整数数组，我们将这个数组分割成几个“块”，并将这些块分别进行排序。之后再连接起来，使得连接的结果和按升序排序后的原数组相同。
+`arr` 是一个可能包含重复元素的整数数组，我们将这个数组分割成几个“块”，并将这些块分别进行排序。
+
+之后再连接起来，使得连接的结果和按升序排序后的原数组相同。
 
 我们最多能将数组分成多少块？
 
@@ -50,7 +52,11 @@ Tag : 「贪心」
 
 综上，我们证明了对于相同起点，贪心解与最优解结束位置必然相同，从而证明贪心解区间数与最优解相等。
 
-于是原问题转换为如何快速对两数组（原数组 `arr` 和目标数组 `clone`）进行词频比较，由于数值的范围为 $10^8$，如果使用最裸的词频对比方案的话，需要先进行离散化，最终算法的复杂度为 $O(n\log{n} + n^2)$。而更好的解决方案是使用哈希表进行计数，同时维护当前计数不为 $0$ 的数值数量 `tot`，具体的，当我们处理 $arr[i]$ 时，我们在哈希表中对 $arr[i]$ 进行计数加一，而在处理 $clone[i]$ 时，对 $clone[i]$ 进行计数减一。从而将词频比较的复杂度从 $O(n^2)$ 下降到 $O(n)$。
+于是原问题转换为如何快速对两数组（原数组 `arr` 和目标数组 `clone`）进行词频比较，由于数值的范围为 $10^8$，如果使用最裸的词频对比方案的话，需要先进行离散化，最终算法的复杂度为 $O(n\log{n} + n^2)$。
+
+更好的解决方案是使用哈希表进行计数，同时维护当前计数不为 $0$ 的数值数量 `tot`。
+
+具体的，当我们处理 $arr[i]$ 时，我们在哈希表中对 $arr[i]$ 进行计数加一，而在处理 $clone[i]$ 时，对 $clone[i]$ 进行计数减一。从而将词频比较的复杂度从 $O(n^2)$ 下降到 $O(n)$。
 
 Java 代码：
 ```Java
@@ -73,6 +79,29 @@ class Solution {
         return ans;
     }
 }
+```
+Python 代码：
+```Python
+class Solution:
+    def maxChunksToSorted(self, arr: List[int]) -> int:
+        clone = sorted(arr)
+        n, ans, tot = len(arr), 0, 0
+        mapping = defaultdict(int)
+        for i in range(n):
+            a, b = arr[i], clone[i]
+            if mapping.get(a, 0) == -1:
+                tot -= 1
+            elif mapping.get(a, 0) == 0:
+                tot += 1
+            mapping[a] = mapping.get(a, 0) + 1
+            if mapping.get(b, 0) == 1:
+                tot -= 1
+            elif mapping.get(b, 0) == 0:
+                tot += 1
+            mapping[b] = mapping.get(b, 0) - 1
+            if tot == 0:
+                ans += 1
+        return ans
 ```
 TypeScript 代码：
 ```TypeScript
