--- a/LeetCode/891-900/899. 有序队列（困难）.md
+++ b/LeetCode/891-900/899. 有序队列（困难）.md
@@ -6,7 +6,9 @@ Tag : 「构造」、「最小表示法」
 
 
 
-给定一个字符串 `s` 和一个整数 `k` 。你可以从 `s` 的前 `k` 个字母中选择一个，并把它加到字符串的末尾。
+给定一个字符串 `s` 和一个整数 `k` 。
+
+你可以从 `s` 的前 `k` 个字母中选择一个，并把它加到字符串的末尾。
 
 返回 在应用上述步骤的任意数量的移动后，字典上最小的字符串 。
 
@@ -78,6 +80,58 @@ class Solution {
         }
     }
 }
+```
+C++ 代码：
+```C++
+class Solution {
+public:
+    string orderlyQueue(string s, int _k) {
+        if (_k == 1) {
+            int i = 0, j = 1, k = 0, n = s.length();
+            while (i < n && j < n && k < n) {
+                char a = s[(i + k) % n], b = s[(j + k) % n];
+                if (a == b) k++;
+                else {
+                    if (a > b) i += k + 1;
+                    else j += k + 1;
+                    if (i == j) i++;
+                    k = 0;
+                }
+            }
+            i = min(i, j);
+            return s.substr(i) + s.substr(0, i);
+        } else {
+            char* cs = new char[s.length()];
+            copy(s.begin(), s.end(), cs);
+            sort(cs, cs + s.length());
+            string sortedString(cs, s.length());
+            return sortedString;
+        }
+    }
+};
+```
+Python 代码：
+```Python
+class Solution:
+    def orderlyQueue(self, s: str, _k: int) -> str:
+        if _k == 1:
+            i, j, k, n = 0, 1, 0, len(s)
+            while i < n and j < n and k < n:
+                a, b = s[(i + k) % n], s[(j + k) % n]
+                if a == b:
+                    k += 1
+                else:
+                    if a > b:
+                        i += k + 1
+                    else:
+                        j += k + 1
+                    if i == j:
+                        i += 1
+                    k = 0
+            i = min(i, j)
+            return s[i:] + s[:i]
+        else:
+            return ''.join(sorted(s))
 ```
 TypeScript 代码：
 ```TypeScript
