--- a/LeetCode/901-910/908. 最小差值 I（简单）.md
+++ b/LeetCode/901-910/908. 最小差值 I（简单）.md
@@ -8,11 +8,13 @@ Tag : 「模拟」、「脑筋急转弯」
 
 给你一个整数数组 `nums`，和一个整数 `k` 。
 
-在一个操作中，您可以选择 $0 <= i < nums.length$ 的任何索引 `i` 。将 $nums[i]$ 改为 $nums[i] + x$ ，其中 $x$ 是一个范围为 $[-k, k]$ 的整数。对于每个索引 `i` ，最多 只能 应用 一次 此操作。
+在一个操作中，您可以选择 $0 <= i < nums.length$ 的任何索引 `i` 。将 $nums[i]$ 改为 $nums[i] + x$ ，其中 $x$ 是一个范围为 $[-k, k]$ 的整数。
 
-`nums` 的 分数 是 `nums` 中最大和最小元素的差值。 
+对于每个索引 `i` ，最多只能应用一次此操作。
 
-在对  `nums` 中的每个索引最多应用一次上述操作后，返回 `nums` 的最低 分数 。
+`nums` 的分数是 `nums` 中最大和最小元素的差值。 
+
+在对  `nums` 中的每个索引最多应用一次上述操作后，返回 `nums` 的最低分数。
 
 示例 1：
 ```
@@ -48,9 +50,11 @@ Tag : 「模拟」、「脑筋急转弯」
 
 ### 脑筋急转弯
 
-根据题意，对于任意一个数 $nums[i]$ 而言，其所能变化的范围为 $[nums[i] - k, nums[i] + k]$，我们需要最小化变化后的差值。而当 $k$ 足够大时，我们必然能够将所有数变为同一个值，此时答案为 $0$，而更一般的情况，我们能够缩减的数值距离为 $2 * k$，因此如果原来的最大差值为 $d = \max - \min$，若 $d <= 2 * k$ 时，答案为 $0$，否则答案为 $d - 2 * k$。
+根据题意，对于任意一个数 $nums[i]$ 而言，其所能变化的范围为 $[nums[i] - k, nums[i] + k]$，我们需要最小化变化后的差值。
 
-代码：
+当 $k$ 足够大时，我们必然能够将所有数变为同一个值，此时答案为 $0$，而更一般的情况，我们能够缩减的数值距离为 $2 \times k$，因此如果原来的最大差值为 $d = \max - \min$，若 $d <= 2 \times k$ 时，答案为 $0$，否则答案为 $d - 2 \times k$。
+
+Java 代码：
 ```Java
 class Solution {
     public int smallestRangeI(int[] nums, int k) {
@@ -62,6 +66,37 @@ class Solution {
         return Math.max(0, max - min - 2 * k);
     }
 }
+```
+C++ 代码：
+```C++
+class Solution {
+public:
+    int smallestRangeI(vector<int>& nums, int k) {
+        int maxv = nums[0], minv = nums[0];
+        for (int i : nums) {
+            maxv = max(maxv, i);
+            minv = min(minv, i);
+        }
+        return max(0, maxv - minv - 2 * k);
+    }
+};
+```
+Python 代码：
+```Python
+class Solution:
+    def smallestRangeI(self, nums: List[int], k: int) -> int:
+        return max(0, max(nums) - min(nums) - 2 * k)
+```
+TypeScript 代码：
+```TypeScript
+function smallestRangeI(nums: number[], k: number): number {
+    let maxv = nums[0], minv = nums[0];
+    for (const i of nums) {
+        maxv = Math.max(maxv, i);
+        minv = Math.min(minv, i);
+    }
+    return Math.max(0, maxv - minv - 2 * k);
+};
 ```
 * 时间复杂度：$O(n)$
 * 空间复杂度：$O(1)$
