--- a/LeetCode/241-250/241. 为运算表达式设计优先级（中等）.md
+++ b/LeetCode/241-250/241. 为运算表达式设计优先级（中等）.md
@@ -6,7 +6,7 @@ Tag : 「DFS」、「爆搜」
 
 
 
-给你一个由数字和运算符组成的字符串 `expression`，按不同优先级组合数字和运算符，计算并返回所有可能组合的结果。你可以 按任意顺序 返回答案。
+给你一个由数字和运算符组成的字符串 `expression`，按不同优先级组合数字和运算符，计算并返回所有可能组合的结果。你可以按任意顺序返回答案。
 
 生成的测试用例满足其对应输出值符合 $32$ 位整数范围，不同结果的数量不超过 $10^4$ 。
 
@@ -91,21 +91,21 @@ C++ 代码：
 ```C++
 class Solution {
 public:
-    string cs;
-    vector<int> diffWaysToCompute(string s) {
-        cs = s;
-        return dfs(0, cs.size() - 1);
+    string s;
+    vector<int> diffWaysToCompute(string _s) {
+        s = _s;
+        return dfs(0, s.size() - 1);
     }
     vector<int> dfs(int l, int r) {
         vector<int> ans;
         for (int i = l; i <= r; i++) {
-            if (cs[i] >= '0' && cs[i] <= '9') continue;
+            if (isdigit(s[i])) continue; 
             auto l1 = dfs(l, i - 1), l2 = dfs(i + 1, r);
             for (int a : l1) {
                 for (int b : l2) {
                     int cur = 0;
-                    if (cs[i] == '+') cur = a + b;
-                    else if (cs[i] == '-') cur = a - b;
+                    if (s[i] == '+') cur = a + b;
+                    else if (s[i] == '-') cur = a - b;
                     else cur = a * b;
                     ans.push_back(cur);
                 }
@@ -113,7 +113,7 @@ public:
         }
         if (ans.empty()) {
             int cur = 0;
-            for (int i = l; i <= r; i++) cur = cur * 10 + (cs[i] - '0');
+            for (int i = l; i <= r; i++) cur = cur * 10 + (s[i] - '0');
             ans.push_back(cur);
         }
         return ans;
