--- a/LeetCode/791-800/793. 阶乘函数后 K 个零（困难）.md
+++ b/LeetCode/791-800/793. 阶乘函数后 K 个零（困难）.md
@@ -6,7 +6,9 @@ Tag : 「数学」、「二分」、「容斥原理」
 
 
 
-`f(x)` 是 `x!` 末尾是 `0` 的数量。回想一下 `x! = 1 * 2 * 3 * ... * x`，且 `0! = 1`。
+`f(x)` 是 `x!` 末尾是 `0` 的数量。
+
+回想一下 `x! = 1 * 2 * 3 * ... * x`，且 `0! = 1`。
 
 例如， `f(3) = 0`，因为 `3! = 6` 的末尾没有 `0` ；而 `f(11) = 2`，因为 `11!= 39916800` 末端有 `2` 个 `0` 。
 
@@ -48,9 +50,13 @@ Tag : 「数学」、「二分」、「容斥原理」
 
 同时我们可知：随着 $n$ 的增大，其所能分解出来的 $5$ 的个数必然是递增的。
 
-基于此，我们可以通过「二分 + 容斥原理」来得出分解 $5$ 个数恰好为 $k$ 的连续段长度。假设我们存在函数 `f(k)` 可得到非负整数中分解 $5$ 个数为小于等于 `k` 的个数，那么最终 `f(k) - f(k - 1)` 即是答案。
+基于此，我们可以通过「二分 + 容斥原理」来得出分解 $5$ 个数恰好为 $k$ 的连续段长度。
 
-在单调函数上求解小于等于 `k` 分割点，可通过「二分」来做。剩下的问题是，如何求得给定 `x` 时，其阶乘分解所包含 $5$ 个个数，这可以通过 $O(\log{x})$ 的筛法来做。
+假设我们存在函数 `f(k)` 可得到非负整数中分解 $5$ 个数为小于等于 `k` 的个数，那么最终 `f(k) - f(k - 1)` 即是答案。
+
+在单调函数上求解小于等于 `k` 分割点，可通过「二分」来做。
+
+剩下的问题是，如何求得给定 `x` 时，其阶乘分解所包含 $5$ 个个数，这可以通过 $O(\log{x})$ 的筛法来做。
 
 最后还要确定二分的值域，由于我们是求阶乘分解中 $5$ 的个数，因此值域的上界为 $5k$，利用 $k$ 的范围为 $1e9$，直接取成 $1e10$ 即可。
 
@@ -78,6 +84,56 @@ class Solution {
         return ans;
     }
 }
+```
+C++ 代码：
+```C++
+class Solution {
+public:
+    int preimageSizeFZF(int k) {
+        if (k <= 1) return 5;
+        return f(k) - f(k - 1);
+    }
+    int f(int x) {
+        long long l = 0, r = 1e10;
+        while (l < r) {
+            long long mid = l + r + 1 >> 1;
+            if (getCnt(mid) <= x) l = mid;
+            else r = mid - 1;
+        }
+        return (int)l;
+    }
+    long long getCnt(long long x) {
+        long long ans = 0;
+        while (x != 0) {
+            ans += x / 5; x /= 5;
+        }
+        return ans;
+    }
+};
+```
+Python 代码：
+```Python
+class Solution:
+    def preimageSizeFZF(self, k):
+        if k <= 1: return 5
+        return self.f(k) - self.f(k - 1)
+
+    def f(self, x):
+        l, r = 0, 10 ** 10
+        while l < r:
+            mid = (l + r + 1) // 2
+            if self.getCnt(mid) <= x:
+                l = mid
+            else:
+                r = mid - 1
+        return int(l)
+
+    def getCnt(self, x):
+        ans = 0
+        while x != 0:
+            ans += x // 5
+            x //= 5
+        return ans
 ```
 TypeScript 代码：
 ```TypeScript
