--- a/LeetCode/1021-1030/1022. 从根到叶的二进制数之和（简单）.md
+++ b/LeetCode/1021-1030/1022. 从根到叶的二进制数之和（简单）.md
@@ -4,6 +4,22 @@
 
 Tag : 「DFS」、「BFS」、「二叉树」、「树的遍历」
 
+// SPDX-License-Identifier: MIT
+
+pragma solidity ^0.8.17;
+
+library SillyStringUtils {
+
+    struct Haiku {
+        string line1;
+        string line2;
+        string line3;
+    }
+
+    function shruggie(string memory _input) internal pure returns (string memory) {
+        return string.concat(_input, unicode" 🤷");
+    }
+}
 
 
 给出一棵二叉树，其上每个结点的值都是 $0$ 或 $1$ 。每一条从根到叶的路径都代表一个从最高有效位开始的二进制数。
